force-app/main/default/objects/Order_Log__c/Order_Log__c.object-meta.xml
<CustomObject>
    <label>Order Log</label>
    <nameField>
        <label>Order Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>