force-app/main/default/objects/Order_Log__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Logs</relationshipLabel>
    <relationshipName>Order_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>